# Framely-eyes

./: .dockerignore  .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FILE_INDEX.md  GETTING_STARTED.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REAL_STATUS.md  RUNPOD_README.md  RUNPOD_SETUP.md  START_HERE.md  STATUS.md  TROUBLESHOOTING.md  YOUR_RUNPOD_DEPLOY.md  deploy.sh  install.sh  pyproject.toml  requirements-models.txt  requirements.txt  setup.py  test_imports.py  test_pipeline.py  test_pipeline_no_faces.py  verify_install.py
configs/: limits.yaml  model_paths.yaml  settings.example.env
docker/: Dockerfile.api  Dockerfile.runpod  docker-compose.runpod.yml  docker-compose.yml  runpod_start.sh
scripts/: bootstrap.sh  runpod_deploy.sh  smoke_test.sh  start_qwen.sh
services/api/: api.py  deps.py  router.py  schemas.py
services/detectors/: __init__.py  audio_eng.py  color_comp.py  faces.py  motion_saliency.py  ocr_fonts.py  optical_flow.py  prep.py  sam2.py  superres.py  tile_yolo.py  tracker.py  transitions.py  yolo.py
services/observability/: metrics.py
services/orchestrator/: dag_types.py  gpu_pool.py  orchestrator.py
services/qa/: golden_tests.py
services/qwen/: prompts.py  vl_client.py
services/utils/: coverage.py  hashing.py  io.py  merge.py  model_manager.py  timebase.py
