[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "framely-eyes"
version = "1.0.0"
description = "GPU-first, ultra-detailed Video Perception OS"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Framely-Eyes Team"}
]
keywords = ["video", "analysis", "computer-vision", "audio", "ai", "perception"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/yourorg/framely-eyes"
Documentation = "https://github.com/yourorg/framely-eyes/blob/main/README.md"
Repository = "https://github.com/yourorg/framely-eyes"
Issues = "https://github.com/yourorg/framely-eyes/issues"

[tool.setuptools.packages.find]
include = ["services*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["services/qa"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
